# Atlas

./: .flake8  .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
.agents/skills/add_documentation/: SKILL.md
.github/workflows/: ci.yml
demos/: european_equity_option_pricer.ipynb  fx_forward_pricer.ipynb
docs/: index.md
docs/developer/: adding_instruments_pricers.md  architecture.md  contributing.md
docs/reference/: api.md  mathematical_models.md
docs/user/: getting_started.md  market_data_pipeline.md  portfolio_valuation.md
src/atlas/: __init__.py
src/atlas/compiliers/: __init__.py  equity_option_compiler.py
src/atlas/compute/pricing/: __init__.py  pricing_dispatcher.py
src/atlas/compute/pricing/equities/: __init__.py  equity_option_pricers.py
src/atlas/compute/pricing/fx/: __init__.py  fx_forward_pricer.py
src/atlas/compute/selectors/: __init__.py  select_equity_option_data.py  select_fx_forward_data.py
src/atlas/core/: sde.py
src/atlas/domain/: enums.py  portfolio.py
src/atlas/domain/instruments/equities/: options.py
src/atlas/domain/market/: market_data.py
src/atlas/market/: environment.py  resolver.py
src/atlas/valuation/fx/: forward.py
tests/: test_equity_option_compiler.py  test_equity_option_pricers.py  test_import.py
tests/core/: test_rng.py  test_sde.py
tests/domain/: test_portfolio.py
tests/domain/instruments/equity/: test_forward.py  test_option.py
tests/domain/instruments/fx/: test_forward.py  test_option.py
tests/market/: test_environment.py  test_resolver.py
(+6 files in other folders)
