[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Quantitative finance library for risk and valuation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]
authors = [
    { name = "Frik Strydom" },
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "flake8",
    "pytest",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
exclude = [
    ".venv",
]

[[tool.mypy.overrides]]
module = [
    "QuantLib.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
